--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-promise-middleware": "^4.2.0",
+    "redux-promise-middleware": "4.2.1",
     "redux-thunk": "^2.2.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.5.0"
