--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "a starter template",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./server/server.js",
+    "dev": "cross-env NODE_ENV=development babel-node ./server/server.js",
     "lint": "eslint client server",
     "prestart": "webpack --config webpack.config.prod.js && babel server --out-dir build",
     "start": "cross-env NODE_ENV=production node build/server.js"
@@ -31,6 +31,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-form": "^6.8.0",
     "redux-logger": "^2.7.4",
     "redux-promise-middleware": "4.2.1",
     "redux-thunk": "^2.2.0",
@@ -56,8 +57,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "json-loader": "^0.5.4",
-    "nodemon": "^1.11.0"
+    "json-loader": "^0.5.4"
   },
   "babel": {
     "presets": [
