--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development babel-node ./server/server.js",
     "lint": "eslint client server",
-    "prestart": "webpack --config webpack.config.prod.js && babel server --out-dir build",
+    "build": "webpack --config webpack.config.prod.js && babel server --out-dir build",
     "start": "cross-env NODE_ENV=production node build/server.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "axios": "^0.15.3",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
+    "cross-env": "^3.1.4",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.29.0",
     "mongoose": "^4.7.7",
@@ -49,7 +50,6 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
-    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
