--- a/package.json
+++ b/package.json
@@ -19,27 +19,15 @@
   },
   "homepage": "https://github.com/ewok2030/react-starter#readme",
   "dependencies": {
-    "axios": "^0.15.3",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
     "cross-env": "^3.1.4",
     "express": "^4.14.0",
-    "html-webpack-plugin": "^2.29.0",
     "mongoose": "^4.7.7",
-    "path": "^0.12.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "redux": "^3.6.0",
-    "redux-form": "^6.8.0",
-    "redux-logger": "^2.7.4",
-    "redux-promise-middleware": "4.2.1",
-    "redux-thunk": "^2.2.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.5.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -50,14 +38,25 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.26.1",
+    "connected-react-router": "^4.4.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "json-loader": "^0.5.4"
+    "html-webpack-plugin": "^2.29.0",
+    "json-loader": "^0.5.4",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^3.7.2",
+    "redux-form": "^7.4.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "babel": {
     "presets": [
