Upgraded React, WebPack, Babel, and ESLint

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-starter",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "a starter template",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development babel-node ./server/server.js",
-    "lint": "eslint client server",
-    "build": "webpack --config webpack.config.prod.js && babel server --out-dir build",
-    "start": "cross-env NODE_ENV=production node build/server.js"
+    "dev": "npm run server && npm run client",
+    "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+    "server": "babel-node src/server/index.js",
+    "lint": "eslint src",
+    "build": "webpack --mode production && babel src/server --out-dir build",
+    "start": "node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,48 +23,48 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
-    "cross-env": "^3.1.4",
-    "express": "^4.14.0",
-    "mongoose": "^4.7.7",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.11",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "babel-cli": "^6.18.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "connected-react-router": "^4.4.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "html-webpack-plugin": "^2.29.0",
-    "json-loader": "^0.5.4",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "babel-eslint": "^10.0.0",
+    "babel-loader": "^8.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "connected-react-router": "^5.0.1",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^2.0.0",
+    "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-hot-loader": "^4.3.12",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
+    "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.5.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-0"
-    ]
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.3"
   }
 }
