--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,17 @@
 {
-    "extends": "airbnb",
-    "parser": "babel-eslint",
-    "plugins": [
-        "react",
-        "jsx-a11y",
-        "import"
-    ],
-    "env": {
-        "browser": true,
-        "node": true
-    },
-    "ecmaFeatures": {
-        "jsx": true,
-        "es6": true,
-        "classes": true
-    },
-    "rules": {
-        "max-len": [1, 180, 4],
-        "no-underscore-dangle": [0],
-        "react/jsx-filename-extension": [1, {
-            "extensions": [".js", ".jsx"]
-        }],
-        "react/prefer-stateless-function": [0],
-        "react/forbid-prop-types": [0]
-    }
+  "extends": "airbnb",
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "rules": {
+    "no-console": "off",
+    "comma-dangle": "off",
+    "max-len": [1, 180, 4],
+    "no-underscore-dangle": [0],
+    "react/jsx-filename-extension": "off",
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "react/prefer-stateless-function": [0]
+  }
 }
